--- a/frontend/src/app/pages/signup-page/signup-page.component.html
+++ b/frontend/src/app/pages/signup-page/signup-page.component.html
@@ -3,6 +3,22 @@
       <h1 class="title has-text-primary">
         Sign Up
       </h1>
+      <div class="field">
+        <p class="control has-icons-left">
+          <input #firstName class="input has-background-light" type="text" placeholder="firstName">
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </p>
+      </div>
+      <div class="field">
+        <p class="control has-icons-left">
+          <input #lastName class="input has-background-light" type="text" placeholder="lastName">
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </p>
+      </div>
       <div class="title">
         <div class="field">
           <p class="control has-icons-left has-icons-right">
@@ -23,7 +39,7 @@
         <i routerLink="/login" class="fa fa-exchange-alt has-text-primary" style="opacity: 0.7; transform: scale(0.8); margin-top:10px;" aria-hidden="true"></i>
         <div class="field is-pulled-right">
           <p class="control">
-            <button class="button is-success has-text-white" (click)="signupClick(email.value, password.value)">
+            <button class="button is-success has-text-white" (click)="signupClick(firstName.value,lastName.value,email.value, password.value)">
               Sign Up
             </button>
           </p>
