--- a/frontend/src/app/pages/home-page/home-page.component.html
+++ b/frontend/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://shefuchow.github.io">
+      <a class="navbar-item" href="https://anujagrawal.netlify.app">
       <img src="../../../assets/programming-code.svg"> &nbsp; TaskManager By Anuj Agrawal
       </a>
     </div>
