--- a/frontend/src/app/pages/task-view/task-view.component.html
+++ b/frontend/src/app/pages/task-view/task-view.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
+    <!-- <div class="navbar-start">
       <a class="navbar-item" href="https://github.com/anuja0656/Task_Manager_MEAN_Project">
           <img src="../../../assets/25231.svg"> &nbsp; Git Repo
           </a>
@@ -36,20 +36,20 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a routerLink="/signup" class="button is-primary has-text-white">
-            <strong>Sign up</strong>
-          </a>
-          <a routerLink="/home" class="button is-light">
-            Log Out
-          </a>
-        </div>
+  <div class="navbar-end">
+    <div class="navbar-item">
+      <div class="buttons">
+        <!-- <a routerLink="/signup" class="button is-primary has-text-white">
+          <strong>Sign up</strong>
+        </a> -->
+        <a routerLink="/home" class="button is-primary has-text-white">
+          Log Out
+        </a>
       </div>
     </div>
+  </div>
   </div>
 </nav>
 
@@ -61,44 +61,45 @@
       </h1>
 
       <div class="list-menu">
-      <!-- List Elements -->
-        <a class="list-menu-item" *ngFor="let list of lists" [routerLink]="['/lists', list._id]" routerLinkActive="is-active">
+        <!-- List Elements -->
+        <a class="list-menu-item" *ngFor="let list of lists" [routerLink]="['/lists', list._id]"
+          routerLinkActive="is-active">
           <p>{{ list.title }}</p>
         </a>
       </div>
-     
-          <div class="dropdown is-up is-hoverable">
-            <div class="dropdown-trigger">
-              <button class="button is-primary has-text-white" aria-haspopup="true" aria-controls="dropdown-menu4">
-                <span><i class="fas fa-cog" aria-hidden="true">&nbsp;&nbsp;</i>List</span>
-                <span class="icon is-small">
-                  <i class="fas fa-angle-up" aria-hidden="true"></i>
-                </span>
-              </button>
-            </div>
-            <div class="dropdown-menu" style="max-width:100px" role="menu">
-              <div class="dropdown-content" style="max-width:100px">
-                <div class="dropdown-item" >
-                  <div *ngIf="router.url != '/lists'">
-                    <a routerLink='/new-list' class="dropdown-item single">
-                      Create
-                    </a>
-                    <a [routerLink]="['/edit-list', selectedListId]" class="dropdown-item single" >
-                      Edit
-                    </a>
-                    <a (click)="deleteListClick()" class="dropdown-item has-text-danger single" >
-                      Delete
-                    </a>
-                  </div>
-                  <div *ngIf="router.url === '/lists'">
-                    <a routerLink='/new-list' class="dropdown-item single" >
-                      Create
-                    </a>
-                  </div>
-                </div>
+
+      <div class="dropdown is-up is-hoverable">
+        <div class="dropdown-trigger">
+          <button class="button is-primary has-text-white" aria-haspopup="true" aria-controls="dropdown-menu4">
+            <span><i class="fas fa-cog" aria-hidden="true">&nbsp;&nbsp;</i>List</span>
+            <span class="icon is-small">
+              <i class="fas fa-angle-up" aria-hidden="true"></i>
+            </span>
+          </button>
+        </div>
+        <div class="dropdown-menu" style="max-width:100px" role="menu">
+          <div class="dropdown-content" style="max-width:100px">
+            <div class="dropdown-item">
+              <div *ngIf="router.url != '/lists'">
+                <a routerLink='/new-list' class="dropdown-item single">
+                  Create
+                </a>
+                <a [routerLink]="['/edit-list', selectedListId]" class="dropdown-item single">
+                  Edit
+                </a>
+                <a (click)="deleteListClick()" class="dropdown-item has-text-danger single">
+                  Delete
+                </a>
+              </div>
+              <div *ngIf="router.url === '/lists'">
+                <a routerLink='/new-list' class="dropdown-item single">
+                  Create
+                </a>
               </div>
             </div>
           </div>
+        </div>
+      </div>
 
     </div>
 
@@ -107,9 +108,10 @@
         Task
       </h1>
       <div *ngIf="tasks">
-  
+
         <!-- Task Elements -->
-        <div class="task" *ngFor="let task of tasks" (click)="onTaskClick(task)" [ngClass]="{ 'completed': task.completed }">
+        <div class="task" *ngFor="let task of tasks" (click)="onTaskClick(task)"
+          [ngClass]="{ 'completed': task.completed }">
           <div class="task-text">
             <p>{{ task.title }}</p>
           </div>
@@ -129,11 +131,11 @@
 
           </div>
         </div>
-  
+
         <h3 class="empty-state-text" *ngIf="tasks.length === 0">There are no tasks here! Click the + button to create
           a new task.</h3>
 
-        <button routerLink="./new-task"  class=" button circle-add-button has-text-white is-primary">
+        <button routerLink="./new-task" class=" button circle-add-button has-text-white is-primary">
           <img src="../../../assets/plus-icon.svg">
         </button>
       </div>
@@ -141,7 +143,7 @@
       <div *ngIf="!tasks">
         <h3 class="empty-state-text">Welcome, please select a list from the sidebar.</h3>
       </div>
-      
+
 
     </div>
   </div>
